docs/plans/serviceentry-tone.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: watson-tone-analyzer
spec:
  hosts:
  - "gateway.watsonplatform.net"
  ports:
  - number: 443
    name: https
    protocol: https
  resolution: DNS
